[home] icons appear from 568px [hover text] fix line spacing [left nav] testing translate 50%

--- a/themes/willeytheme/assets/styles/layouts/_nav.scss
+++ b/themes/willeytheme/assets/styles/layouts/_nav.scss
@@ -75,12 +75,12 @@ body.admin-bar #sidebar-wrapper {
     width: 100%;
     margin: 0;
     padding: 0;
-    top: 0;
+    top: 50%;
     list-style: none;
-    height: 100vh;
-    -webkit-transform: none;
-    -ms-transform: none;
-    transform: none;
+    height: auto;
+    -webkit-transform: translate(0,-50%);
+    -ms-transform: translate(0,-50%);
+    transform: translate(0,-50%);
     // padding-bottom: 80px;
     @media (min-width: $tablet) {
         position: absolute;
@@ -90,13 +90,13 @@ body.admin-bar #sidebar-wrapper {
         margin: 0;
         list-style: none;
         height: auto;
-        padding: 0;
+        padding-bottom: 80px;
     }
     @media (min-width: $widescreen) {
         position: absolute;
         top: 25vh;
         height: 75vh;
-        padding: 0;
+        padding-bottom: 80px;
     }
 }
 
@@ -315,9 +315,12 @@ body.admin-bar #sidebar-wrapper {
     position: absolute;
     bottom: 0px;
     width: 100%;
-    @media (max-width: 480px) {
+    height: auto;
+    @media (max-width: 767px) {
         position: relative;
         bottom: auto;
+        margin-top: 20px;
+        height: 60px;
     }
 }
 
