--- a/themes/willeytheme/assets/styles/layouts/_packery.scss
+++ b/themes/willeytheme/assets/styles/layouts/_packery.scss
@@ -51,6 +51,9 @@
   width: 20px;
   margin-right: 10px;
   float: left;
+  @media (max-width: 567px) {
+    display: none;
+  }
 }
 
 .work-details-block {
@@ -59,7 +62,7 @@
     line-height: 23px;
   }
   @media (min-width: $tablet) {
-    padding-bottom: 10px;
+    padding-bottom: 5px;
   }
 }
 
@@ -86,6 +89,11 @@
 
 .link-not-active {
   margin-left: 0px;
+  margin-top: -10px;
+  @media (min-width: $tablet) {
+    margin-top: -8px;
+    margin-left: 30px;
+  }
 }
 
 .work-details-info-icon2 {
@@ -209,12 +217,6 @@
     }
     .work-details-info {
       left: 13px;
-    }
-}
-
-@media screen and (min-width: $tablet) {
-    .link-not-active {
-      margin-left: 30px;
     }
 }
 
